commit bilingual contents

--- a/docs/visual-basic/misc/bc30059.md
+++ b/docs/visual-basic/misc/bc30059.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30059
 ms.assetid: fdd5e7bb-6370-4a63-bbb6-23b15badb4c8
-ms.openlocfilehash: 69f7b8af2dcbfd37efd08bc3b2a879316ab7e03e
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: dbb013a71b8c064271e9751dd205dbd6d576e860
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936162"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84391443"
 ---
-# <a name="constant-expression-is-required"></a><span data-ttu-id="df8f2-102">È necessaria l'espressione costante</span><span class="sxs-lookup"><span data-stu-id="df8f2-102">Constant expression is required</span></span>
-<span data-ttu-id="df8f2-103">Un'istruzione `Const` non inizializza correttamente una costante oppure una dichiarazione di matrice usa una variabile per specificare il numero di elementi.</span><span class="sxs-lookup"><span data-stu-id="df8f2-103">A `Const` statement does not properly initialize a constant, or an array declaration uses a variable to specify the number of elements.</span></span>  
+# <a name="constant-expression-is-required"></a><span data-ttu-id="e0cda-102">È necessaria l'espressione costante</span><span class="sxs-lookup"><span data-stu-id="e0cda-102">Constant expression is required</span></span>
+<span data-ttu-id="e0cda-103">Un'istruzione `Const` non inizializza correttamente una costante oppure una dichiarazione di matrice usa una variabile per specificare il numero di elementi.</span><span class="sxs-lookup"><span data-stu-id="e0cda-103">A `Const` statement does not properly initialize a constant, or an array declaration uses a variable to specify the number of elements.</span></span>  
   
- <span data-ttu-id="df8f2-104">**ID errore:** BC30059</span><span class="sxs-lookup"><span data-stu-id="df8f2-104">**Error ID:** BC30059</span></span>  
+ <span data-ttu-id="e0cda-104">**ID errore:** BC30059</span><span class="sxs-lookup"><span data-stu-id="e0cda-104">**Error ID:** BC30059</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="df8f2-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="df8f2-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e0cda-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e0cda-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="df8f2-106">Se la dichiarazione è un'istruzione `Const` , controllare che sia inizializzata con un valore letterale, una costante dichiarata in precedenza, un membro di enumerazione o una combinazione di valori letterali, costanti, membri di enumerazione e operatori.</span><span class="sxs-lookup"><span data-stu-id="df8f2-106">If the declaration is a `Const` statement, check to make sure the constant is initialized with a literal, a previously declared constant, an enumeration member, or a combination of literals, constants, and enumeration members combined with operators.</span></span>  
+1. <span data-ttu-id="e0cda-106">Se la dichiarazione è un'istruzione `Const` , controllare che sia inizializzata con un valore letterale, una costante dichiarata in precedenza, un membro di enumerazione o una combinazione di valori letterali, costanti, membri di enumerazione e operatori.</span><span class="sxs-lookup"><span data-stu-id="e0cda-106">If the declaration is a `Const` statement, check to make sure the constant is initialized with a literal, a previously declared constant, an enumeration member, or a combination of literals, constants, and enumeration members combined with operators.</span></span>  
   
-2. <span data-ttu-id="df8f2-107">Se la dichiarazione specifica una matrice, controllare se per specificare il numero di elementi è usata una variabile.</span><span class="sxs-lookup"><span data-stu-id="df8f2-107">If the declaration specifies an array, check to see if a variable is being used to specify the number of elements.</span></span> <span data-ttu-id="df8f2-108">In caso affermativo, sostituire la variabile con un'espressione costante.</span><span class="sxs-lookup"><span data-stu-id="df8f2-108">If so, replace the variable with a constant expression.</span></span>  
+2. <span data-ttu-id="e0cda-107">Se la dichiarazione specifica una matrice, controllare se per specificare il numero di elementi è usata una variabile.</span><span class="sxs-lookup"><span data-stu-id="e0cda-107">If the declaration specifies an array, check to see if a variable is being used to specify the number of elements.</span></span> <span data-ttu-id="e0cda-108">In caso affermativo, sostituire la variabile con un'espressione costante.</span><span class="sxs-lookup"><span data-stu-id="e0cda-108">If so, replace the variable with a constant expression.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="df8f2-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="df8f2-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e0cda-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e0cda-109">See also</span></span>
 
-- [<span data-ttu-id="df8f2-110">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="df8f2-110">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
+- [<span data-ttu-id="e0cda-110">Istruzione Const</span><span class="sxs-lookup"><span data-stu-id="e0cda-110">Const Statement</span></span>](../language-reference/statements/const-statement.md)
