--- a/docs/visual-basic/misc/bc30614.md
+++ b/docs/visual-basic/misc/bc30614.md
@@ -1,5 +1,5 @@
 ---
-title: Il metodo 'MustOverride' '<methodname>' non può essere chiamato con 'MyClass'
+title: Il metodo 'MustOverride '<methodname>' non può essere chiamato con 'MyClass'
 ms.date: 07/20/2015
 f1_keywords:
 - bc30614
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30614
 ms.assetid: fc57af41-1552-46d1-9727-341f1835e661
-ms.openlocfilehash: 4cf5a823d77c98e85daf2cd31bdc92e6bb889950
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 05d1d573c95bc0b6f443c0e3c651c148194c526c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646801"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389773"
 ---
-# <a name="mustoverride-method-methodname-cannot-be-called-with-myclass"></a><span data-ttu-id="29d71-102">Il metodo 'MustOverride' '\<NomeMetodo >' non può essere chiamato con 'MyClass'</span><span class="sxs-lookup"><span data-stu-id="29d71-102">'MustOverride' method '\<methodname>' cannot be called with 'MyClass'</span></span>
-<span data-ttu-id="29d71-103">`MyClass` equivale a `Me`, ma tutte le chiamate al metodo su di essa sono trattate come se il metodo richiamato fosse `NotOverridable`.</span><span class="sxs-lookup"><span data-stu-id="29d71-103">`MyClass` is equivalent to `Me`, but all method invocations on it are treated as if the method being invoked were `NotOverridable`.</span></span>  
+# <a name="mustoverride-method-methodname-cannot-be-called-with-myclass"></a><span data-ttu-id="204ed-102">Il metodo 'MustOverride '\<methodname>' non può essere chiamato con 'MyClass'</span><span class="sxs-lookup"><span data-stu-id="204ed-102">'MustOverride' method '\<methodname>' cannot be called with 'MyClass'</span></span>
+<span data-ttu-id="204ed-103">`MyClass` equivale a `Me`, ma tutte le chiamate al metodo su di essa sono trattate come se il metodo richiamato fosse `NotOverridable`.</span><span class="sxs-lookup"><span data-stu-id="204ed-103">`MyClass` is equivalent to `Me`, but all method invocations on it are treated as if the method being invoked were `NotOverridable`.</span></span>  
   
- <span data-ttu-id="29d71-104">**ID errore:** BC30614</span><span class="sxs-lookup"><span data-stu-id="29d71-104">**Error ID:** BC30614</span></span>  
+ <span data-ttu-id="204ed-104">**ID errore:** BC30614</span><span class="sxs-lookup"><span data-stu-id="204ed-104">**Error ID:** BC30614</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="29d71-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="29d71-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="204ed-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="204ed-105">To correct this error</span></span>  
   
-- <span data-ttu-id="29d71-106">Rimuovere il modificatore `MustOverride` o dichiarare il metodo in una classe base ed ereditare ed eseguire l'override di tale classe.</span><span class="sxs-lookup"><span data-stu-id="29d71-106">Remove the `MustOverride` modifier, or declare the method in a base class and inherit and override that class.</span></span>  
+- <span data-ttu-id="204ed-106">Rimuovere il modificatore `MustOverride` o dichiarare il metodo in una classe base ed ereditare ed eseguire l'override di tale classe.</span><span class="sxs-lookup"><span data-stu-id="204ed-106">Remove the `MustOverride` modifier, or declare the method in a base class and inherit and override that class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="29d71-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="29d71-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="204ed-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="204ed-107">See also</span></span>
 
-- [<span data-ttu-id="29d71-108">MustOverride</span><span class="sxs-lookup"><span data-stu-id="29d71-108">MustOverride</span></span>](../../visual-basic/language-reference/modifiers/mustoverride.md)
-- [<span data-ttu-id="29d71-109">MustInherit</span><span class="sxs-lookup"><span data-stu-id="29d71-109">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
-- [<span data-ttu-id="29d71-110">NotOverridable</span><span class="sxs-lookup"><span data-stu-id="29d71-110">NotOverridable</span></span>](../../visual-basic/language-reference/modifiers/notoverridable.md)
+- [<span data-ttu-id="204ed-108">MustOverride</span><span class="sxs-lookup"><span data-stu-id="204ed-108">MustOverride</span></span>](../language-reference/modifiers/mustoverride.md)
+- [<span data-ttu-id="204ed-109">MustInherit</span><span class="sxs-lookup"><span data-stu-id="204ed-109">MustInherit</span></span>](../language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="204ed-110">NotOverridable</span><span class="sxs-lookup"><span data-stu-id="204ed-110">NotOverridable</span></span>](../language-reference/modifiers/notoverridable.md)
