--- a/docs/visual-basic/misc/bc31419.md
+++ b/docs/visual-basic/misc/bc31419.md
@@ -1,5 +1,5 @@
 ---
-title: "' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore<typename>''."
+title: "' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore ' <typename> '."
 ms.date: 07/20/2015
 f1_keywords:
 - bc31419
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC31419
 ms.assetid: c44d2936-8c07-443a-b320-ac2bfbc1e9ec
-ms.openlocfilehash: b8f756945740b85d5862f2b1f971da5f80f88134
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: a3e4a0efef8e4b16bd260ba4511f45ab0cddea1a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69660058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408828"
 ---
-# <a name="isnot-requires-operands-that-have-reference-types-but-this-operand-has-the-value-type-typename"></a><span data-ttu-id="25850-102">' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore\<' typeName >'.</span><span class="sxs-lookup"><span data-stu-id="25850-102">'IsNot' requires operands that have reference types, but this operand has the value type '\<typename>'.</span></span>
-<span data-ttu-id="25850-103">Un'espressione usa l' [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) con almeno un operando del tipo valore.</span><span class="sxs-lookup"><span data-stu-id="25850-103">An expression uses the [IsNot Operator](../../visual-basic/language-reference/operators/isnot-operator.md) with at least one value type operand.</span></span>  
+# <a name="isnot-requires-operands-that-have-reference-types-but-this-operand-has-the-value-type-typename"></a><span data-ttu-id="4f617-102">' Non ' richiede operandi con tipi di riferimento, ma questo operando ha il tipo di valore ' \<typename> '.</span><span class="sxs-lookup"><span data-stu-id="4f617-102">'IsNot' requires operands that have reference types, but this operand has the value type '\<typename>'.</span></span>
+<span data-ttu-id="4f617-103">Un'espressione usa l' [IsNot Operator](../language-reference/operators/isnot-operator.md) con almeno un operando del tipo valore.</span><span class="sxs-lookup"><span data-stu-id="4f617-103">An expression uses the [IsNot Operator](../language-reference/operators/isnot-operator.md) with at least one value type operand.</span></span>  
   
- <span data-ttu-id="25850-104">L'operatore `IsNot` consente di determinare se due riferimenti agli oggetti fanno riferimento a oggetti diversi.</span><span class="sxs-lookup"><span data-stu-id="25850-104">The `IsNot` operator determines whether two object references refer to different objects.</span></span> <span data-ttu-id="25850-105">Confronta i valori del puntatore dei tipi riferimento ed è privo di significato con i tipi valore.</span><span class="sxs-lookup"><span data-stu-id="25850-105">It compares the pointer values of reference types and is meaningless with value types.</span></span>  
+ <span data-ttu-id="4f617-104">L'operatore `IsNot` consente di determinare se due riferimenti agli oggetti fanno riferimento a oggetti diversi.</span><span class="sxs-lookup"><span data-stu-id="4f617-104">The `IsNot` operator determines whether two object references refer to different objects.</span></span> <span data-ttu-id="4f617-105">Confronta i valori del puntatore dei tipi riferimento ed è privo di significato con i tipi valore.</span><span class="sxs-lookup"><span data-stu-id="4f617-105">It compares the pointer values of reference types and is meaningless with value types.</span></span>  
   
- <span data-ttu-id="25850-106">**ID errore:** BC31419</span><span class="sxs-lookup"><span data-stu-id="25850-106">**Error ID:** BC31419</span></span>  
+ <span data-ttu-id="4f617-106">**ID errore:** BC31419</span><span class="sxs-lookup"><span data-stu-id="4f617-106">**Error ID:** BC31419</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="25850-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="25850-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4f617-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4f617-107">To correct this error</span></span>  
   
-- <span data-ttu-id="25850-108">Se si ha l'intenzione di confrontare i valori di due tipi di valori, usare l'operatore di confronto `=` o `<>` .</span><span class="sxs-lookup"><span data-stu-id="25850-108">If you intend to compare the values of two value types, use the `=` or `<>` comparison operator.</span></span>  
+- <span data-ttu-id="4f617-108">Se si ha l'intenzione di confrontare i valori di due tipi di valori, usare l'operatore di confronto `=` o `<>` .</span><span class="sxs-lookup"><span data-stu-id="4f617-108">If you intend to compare the values of two value types, use the `=` or `<>` comparison operator.</span></span>  
   
-- <span data-ttu-id="25850-109">Se si ha l'intenzione di confrontare i puntatori di due tipi riferimento, accertarsi di usare i riferimenti agli oggetti per entrambi gli operandi.</span><span class="sxs-lookup"><span data-stu-id="25850-109">If you intend to compare the pointers of two reference types, be sure you are using object references for both operands.</span></span> <span data-ttu-id="25850-110">È possibile usare le variabili o gli elementi di riferimento, quali la parola chiave [Me](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me) che si comportano come variabili di riferimento.</span><span class="sxs-lookup"><span data-stu-id="25850-110">You can use reference variables or elements, such as the [Me](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me) keyword, that behave like reference variables.</span></span>  
+- <span data-ttu-id="4f617-109">Se si ha l'intenzione di confrontare i puntatori di due tipi riferimento, accertarsi di usare i riferimenti agli oggetti per entrambi gli operandi.</span><span class="sxs-lookup"><span data-stu-id="4f617-109">If you intend to compare the pointers of two reference types, be sure you are using object references for both operands.</span></span> <span data-ttu-id="4f617-110">È possibile usare le variabili o gli elementi di riferimento, quali la parola chiave [Me](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me) che si comportano come variabili di riferimento.</span><span class="sxs-lookup"><span data-stu-id="4f617-110">You can use reference variables or elements, such as the [Me](../programming-guide/program-structure/me-my-mybase-and-myclass.md#me) keyword, that behave like reference variables.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="25850-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="25850-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4f617-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4f617-111">See also</span></span>
 
-- [<span data-ttu-id="25850-112">Operatori di confronto in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="25850-112">Comparison Operators in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
-- [<span data-ttu-id="25850-113">Procedura: Verificare se due oggetti sono uguali</span><span class="sxs-lookup"><span data-stu-id="25850-113">How to: Test Whether Two Objects Are the Same</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
+- [<span data-ttu-id="4f617-112">Comparison Operators in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="4f617-112">Comparison Operators in Visual Basic</span></span>](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [<span data-ttu-id="4f617-113">Procedura: determinare se due oggetti sono uguali</span><span class="sxs-lookup"><span data-stu-id="4f617-113">How to: Test Whether Two Objects Are the Same</span></span>](../programming-guide/language-features/operators-and-expressions/how-to-test-whether-two-objects-are-the-same.md)
