--- a/docs/visual-basic/misc/bc32059.md
+++ b/docs/visual-basic/misc/bc32059.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32059
 ms.assetid: 273b69df-910e-45d2-acac-632005d24c5a
-ms.openlocfilehash: ffb05f2da0df9cdbfb74322ab3490b7154069646
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7d365e32da43e146f2dc81abd092bbd1ea7b0dad
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618756"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411961"
 ---
-# <a name="array-lower-bounds-can-be-only-0"></a><span data-ttu-id="c143e-102">I limiti inferiori della matrice possono essere solo '0'</span><span class="sxs-lookup"><span data-stu-id="c143e-102">Array lower bounds can be only '0'</span></span>
-<span data-ttu-id="c143e-103">Un'istruzione di dichiarazione o una clausola `New` specifica una matrice con un limite inferiore diverso da 0.</span><span class="sxs-lookup"><span data-stu-id="c143e-103">A declaration statement or `New` clause specifies an array with a lower bound other than 0.</span></span>  
+# <a name="array-lower-bounds-can-be-only-0"></a><span data-ttu-id="09483-102">I limiti inferiori della matrice possono essere solo '0'</span><span class="sxs-lookup"><span data-stu-id="09483-102">Array lower bounds can be only '0'</span></span>
+<span data-ttu-id="09483-103">Un'istruzione di dichiarazione o una clausola `New` specifica una matrice con un limite inferiore diverso da 0.</span><span class="sxs-lookup"><span data-stu-id="09483-103">A declaration statement or `New` clause specifies an array with a lower bound other than 0.</span></span>  
   
- <span data-ttu-id="c143e-104">Quando si crea o si inizializza una variabile di matrice, è possibile specificare facoltativamente il limite superiore di ciascuna dimensione.</span><span class="sxs-lookup"><span data-stu-id="c143e-104">When you create or initialize an array variable, you can optionally specify the upper bound of each dimension.</span></span> <span data-ttu-id="c143e-105">In questo caso, la lunghezza di quella dimensione diventa il limite superiore maggiorato di uno, perché il limite inferiore è sempre zero.</span><span class="sxs-lookup"><span data-stu-id="c143e-105">If you do, the length of that dimension becomes the upper bound plus one, because the lower bound is always zero.</span></span> <span data-ttu-id="c143e-106">Facoltativamente è possibile indicare anche il limite inferiore, ma è necessario specificare 0.</span><span class="sxs-lookup"><span data-stu-id="c143e-106">You can optionally specify the lower bound as well, but you must specify 0.</span></span> <span data-ttu-id="c143e-107">Il vantaggio, in questo caso, risiede in una più agevole lettura del codice.</span><span class="sxs-lookup"><span data-stu-id="c143e-107">The advantage of doing so is that your code is easier to read.</span></span>  
+ <span data-ttu-id="09483-104">Quando si crea o si inizializza una variabile di matrice, è possibile specificare facoltativamente il limite superiore di ciascuna dimensione.</span><span class="sxs-lookup"><span data-stu-id="09483-104">When you create or initialize an array variable, you can optionally specify the upper bound of each dimension.</span></span> <span data-ttu-id="09483-105">In questo caso, la lunghezza di quella dimensione diventa il limite superiore maggiorato di uno, perché il limite inferiore è sempre zero.</span><span class="sxs-lookup"><span data-stu-id="09483-105">If you do, the length of that dimension becomes the upper bound plus one, because the lower bound is always zero.</span></span> <span data-ttu-id="09483-106">Facoltativamente è possibile indicare anche il limite inferiore, ma è necessario specificare 0.</span><span class="sxs-lookup"><span data-stu-id="09483-106">You can optionally specify the lower bound as well, but you must specify 0.</span></span> <span data-ttu-id="09483-107">Il vantaggio, in questo caso, risiede in una più agevole lettura del codice.</span><span class="sxs-lookup"><span data-stu-id="09483-107">The advantage of doing so is that your code is easier to read.</span></span>  
   
- <span data-ttu-id="c143e-108">**ID errore:** BC32059</span><span class="sxs-lookup"><span data-stu-id="c143e-108">**Error ID:** BC32059</span></span>  
+ <span data-ttu-id="09483-108">**ID errore:** BC32059</span><span class="sxs-lookup"><span data-stu-id="09483-108">**Error ID:** BC32059</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c143e-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c143e-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="09483-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="09483-109">To correct this error</span></span>  
   
-- <span data-ttu-id="c143e-110">Modificare l'impostazione del limite inferiore su 0 o rimuoverla completamente.</span><span class="sxs-lookup"><span data-stu-id="c143e-110">Change the lower bound specification to 0, or remove it entirely.</span></span>  
+- <span data-ttu-id="09483-110">Modificare l'impostazione del limite inferiore su 0 o rimuoverla completamente.</span><span class="sxs-lookup"><span data-stu-id="09483-110">Change the lower bound specification to 0, or remove it entirely.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c143e-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c143e-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="09483-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="09483-111">See also</span></span>
 
-- [<span data-ttu-id="c143e-112">Matrici</span><span class="sxs-lookup"><span data-stu-id="c143e-112">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+- [<span data-ttu-id="09483-112">Matrici</span><span class="sxs-lookup"><span data-stu-id="09483-112">Arrays</span></span>](../programming-guide/language-features/arrays/index.md)
