--- a/docs/visual-basic/misc/bc32066.md
+++ b/docs/visual-basic/misc/bc32066.md
@@ -7,43 +7,43 @@ f1_keywords:
 helpviewer_keywords:
 - BC32066
 ms.assetid: cd43a92c-33fb-4def-bbf7-527d21bff93c
-ms.openlocfilehash: 0967420bdb40f1555929efea0dbd4e03306b7847
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0da1071d651ec669062174ab63cfe982ee569a52
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64755419"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413869"
 ---
-# <a name="type-arguments-unexpected-because-attributes-cannot-be-generics"></a><span data-ttu-id="19416-102">Argomenti di tipo imprevisti. Gli attributi non possono essere generics</span><span class="sxs-lookup"><span data-stu-id="19416-102">Type arguments unexpected because attributes cannot be generics</span></span>
+# <a name="type-arguments-unexpected-because-attributes-cannot-be-generics"></a><span data-ttu-id="b20c4-102">Argomenti di tipo imprevisti. Gli attributi non possono essere generics</span><span class="sxs-lookup"><span data-stu-id="b20c4-102">Type arguments unexpected because attributes cannot be generics</span></span>
 
-<span data-ttu-id="19416-103">Un attributo viene applicato usando un elenco di argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="19416-103">An attribute is applied using a type argument list.</span></span>
+<span data-ttu-id="b20c4-103">Un attributo viene applicato usando un elenco di argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="b20c4-103">An attribute is applied using a type argument list.</span></span>
 
-<span data-ttu-id="19416-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="19416-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="19416-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="19416-105">This means the following limitations apply:</span></span>
+<span data-ttu-id="b20c4-104">Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e tipi generici.</span><span class="sxs-lookup"><span data-stu-id="b20c4-104">Visual Basic and the .NET Framework do not currently support any combination of attributes and generic types.</span></span> <span data-ttu-id="b20c4-105">Vengono quindi applicate le limitazioni seguenti:</span><span class="sxs-lookup"><span data-stu-id="b20c4-105">This means the following limitations apply:</span></span>
 
-- <span data-ttu-id="19416-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="19416-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
+- <span data-ttu-id="b20c4-106">Un attributo non può essere un tipo generico né può essere dichiarato all'interno di un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="b20c4-106">An attribute cannot be a generic type or be declared within a generic type.</span></span>
 
-- <span data-ttu-id="19416-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="19416-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
+- <span data-ttu-id="b20c4-107">Un attributo non può ereditare da una classe generica o viceversa.</span><span class="sxs-lookup"><span data-stu-id="b20c4-107">An attribute cannot inherit from a generic class, nor can a generic class inherit from an attribute.</span></span>
 
-- <span data-ttu-id="19416-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="19416-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
+- <span data-ttu-id="b20c4-108">Quando viene applicato un attributo, non è possibile fornire alcun argomento fra quelli riportati di seguito:</span><span class="sxs-lookup"><span data-stu-id="b20c4-108">When you apply an attribute, you cannot supply an argument that is any of the following:</span></span>
 
-  - <span data-ttu-id="19416-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="19416-109">A generic type,</span></span>
+  - <span data-ttu-id="b20c4-109">Un tipo generico</span><span class="sxs-lookup"><span data-stu-id="b20c4-109">A generic type,</span></span>
 
-  - <span data-ttu-id="19416-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="19416-110">A type constructed from a generic type,</span></span>
+  - <span data-ttu-id="b20c4-110">Un tipo costruito da un tipo generico</span><span class="sxs-lookup"><span data-stu-id="b20c4-110">A type constructed from a generic type,</span></span>
 
-  - <span data-ttu-id="19416-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="19416-111">A type parameter of a containing type, or</span></span>
+  - <span data-ttu-id="b20c4-111">Un parametro di tipo di un tipo contenitore o</span><span class="sxs-lookup"><span data-stu-id="b20c4-111">A type parameter of a containing type, or</span></span>
 
-  - <span data-ttu-id="19416-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="19416-112">A type constructed from a type parameter of a containing type.</span></span>
+  - <span data-ttu-id="b20c4-112">Un tipo costruito da un parametro di tipo di un tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="b20c4-112">A type constructed from a type parameter of a containing type.</span></span>
 
-<span data-ttu-id="19416-113">**ID errore:** BC32066</span><span class="sxs-lookup"><span data-stu-id="19416-113">**Error ID:** BC32066</span></span>
+<span data-ttu-id="b20c4-113">**ID errore:** BC32066</span><span class="sxs-lookup"><span data-stu-id="b20c4-113">**Error ID:** BC32066</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="19416-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="19416-114">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="b20c4-114">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b20c4-114">To correct this error</span></span>
 
-- <span data-ttu-id="19416-115">Se gli argomenti di tipo sono destinati a essere argomenti normali, rimuovere la parola chiave `Of` .</span><span class="sxs-lookup"><span data-stu-id="19416-115">If the type arguments are intended to be normal arguments, then remove the `Of` keyword.</span></span> <span data-ttu-id="19416-116">Questa operazione consente di trasformare gli elenchi di argomenti di tipo in un elenco di argomenti normali.</span><span class="sxs-lookup"><span data-stu-id="19416-116">Doing so turns the type argument list into a normal argument list.</span></span>
+- <span data-ttu-id="b20c4-115">Se gli argomenti di tipo sono destinati a essere argomenti normali, rimuovere la parola chiave `Of` .</span><span class="sxs-lookup"><span data-stu-id="b20c4-115">If the type arguments are intended to be normal arguments, then remove the `Of` keyword.</span></span> <span data-ttu-id="b20c4-116">Questa operazione consente di trasformare gli elenchi di argomenti di tipo in un elenco di argomenti normali.</span><span class="sxs-lookup"><span data-stu-id="b20c4-116">Doing so turns the type argument list into a normal argument list.</span></span>
 
-- <span data-ttu-id="19416-117">Se gli argomenti di tipo sono destinati a essere forniti ai parametri di tipo, rimuovere la parola chiave `Of` e tutti gli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="19416-117">If the type arguments are intended to be supplied to type parameters, then remove the `Of` keyword and all the type arguments.</span></span> <span data-ttu-id="19416-118">Un attributo non può accettare argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="19416-118">An attribute cannot accept type arguments.</span></span>
+- <span data-ttu-id="b20c4-117">Se gli argomenti di tipo sono destinati a essere forniti ai parametri di tipo, rimuovere la parola chiave `Of` e tutti gli argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="b20c4-117">If the type arguments are intended to be supplied to type parameters, then remove the `Of` keyword and all the type arguments.</span></span> <span data-ttu-id="b20c4-118">Un attributo non può accettare argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="b20c4-118">An attribute cannot accept type arguments.</span></span>
 
-## <a name="see-also"></a><span data-ttu-id="19416-119">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="19416-119">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b20c4-119">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b20c4-119">See also</span></span>
 
 - <xref:System.Attribute>
-- [<span data-ttu-id="19416-120">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="19416-120">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="19416-121">Elenco dei tipi</span><span class="sxs-lookup"><span data-stu-id="19416-121">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)
+- [<span data-ttu-id="b20c4-120">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="b20c4-120">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="b20c4-121">Type List</span><span class="sxs-lookup"><span data-stu-id="b20c4-121">Type List</span></span>](../language-reference/statements/type-list.md)
