--- a/docs/visual-basic/misc/bc30087.md
+++ b/docs/visual-basic/misc/bc30087.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30087
 ms.assetid: 81c056bb-267e-44ef-9a44-3a41273090ea
-ms.openlocfilehash: 61be4f67e2a85e5b82b6d51a7117a9635c3e98e5
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 9cfbf217a684626acf27e661885a0b9ed9e51ed2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935928"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380497"
 ---
-# <a name="end-if-must-be-preceded-by-a-matching-if"></a><span data-ttu-id="5fd7f-102">'End If' deve essere preceduto da un oggetto 'If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="5fd7f-102">'End If' must be preceded by a matching 'If'</span></span>
-<span data-ttu-id="5fd7f-103">Un'istruzione `End If` si verifica senza un'istruzione `If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="5fd7f-103">An `End If` statement occurs without a corresponding `If` statement.</span></span> <span data-ttu-id="5fd7f-104">`End If` deve essere preceduto da un'istruzione `If` .</span><span class="sxs-lookup"><span data-stu-id="5fd7f-104">`End If` must be preceded by an `If` statement.</span></span>  
+# <a name="end-if-must-be-preceded-by-a-matching-if"></a><span data-ttu-id="84527-102">'End If' deve essere preceduto da un oggetto 'If' corrispondente</span><span class="sxs-lookup"><span data-stu-id="84527-102">'End If' must be preceded by a matching 'If'</span></span>
+<span data-ttu-id="84527-103">Un'istruzione `End If` si verifica senza un'istruzione `If` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="84527-103">An `End If` statement occurs without a corresponding `If` statement.</span></span> <span data-ttu-id="84527-104">`End If` deve essere preceduto da un'istruzione `If` .</span><span class="sxs-lookup"><span data-stu-id="84527-104">`End If` must be preceded by an `If` statement.</span></span>  
   
- <span data-ttu-id="5fd7f-105">**ID errore:** BC30087</span><span class="sxs-lookup"><span data-stu-id="5fd7f-105">**Error ID:** BC30087</span></span>  
+ <span data-ttu-id="84527-105">**ID errore:** BC30087</span><span class="sxs-lookup"><span data-stu-id="84527-105">**Error ID:** BC30087</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5fd7f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5fd7f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="84527-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="84527-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="5fd7f-107">Se questo blocco `If` fa parte di un set di blocchi `If` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="5fd7f-107">If this `If` block is part of a set of nested `If` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="84527-107">Se questo blocco `If` fa parte di un set di blocchi `If` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="84527-107">If this `If` block is part of a set of nested `If` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="5fd7f-108">Verificare che le altre strutture di controllo all'interno del blocco `If` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="5fd7f-108">Verify that other control structures within the `If` block are correctly terminated.</span></span>  
+2. <span data-ttu-id="84527-108">Verificare che le altre strutture di controllo all'interno del blocco `If` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="84527-108">Verify that other control structures within the `If` block are correctly terminated.</span></span>  
   
-3. <span data-ttu-id="5fd7f-109">Verificare che il blocco `If` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="5fd7f-109">Ensure that this `If` block is correctly formatted.</span></span>  
+3. <span data-ttu-id="84527-109">Verificare che il blocco `If` sia formattato correttamente.</span><span class="sxs-lookup"><span data-stu-id="84527-109">Ensure that this `If` block is correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5fd7f-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5fd7f-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="84527-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="84527-110">See also</span></span>
 
-- [<span data-ttu-id="5fd7f-111">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="5fd7f-111">If...Then...Else Statement</span></span>](../../visual-basic/language-reference/statements/if-then-else-statement.md)
+- [<span data-ttu-id="84527-111">Istruzione If...Then...Else</span><span class="sxs-lookup"><span data-stu-id="84527-111">If...Then...Else Statement</span></span>](../language-reference/statements/if-then-else-statement.md)
