--- a/docs/visual-basic/misc/bc30502.md
+++ b/docs/visual-basic/misc/bc30502.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile combinare 'Shared' con '<specifier>' in una dichiarazione di proprietà
+title: Impossibile combinare 'Shared' con '<specifier>' in una dichiarazione di proprietà.
 ms.date: 07/20/2015
 f1_keywords:
 - bc30502
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30502
 ms.assetid: 93d554e1-215c-4779-874a-1b557de708b5
-ms.openlocfilehash: 02e7dd6b80b07e811812facab942ab8d6da4b889
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9282e62030072a6f766d44fe24f1c211f4423fec
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64647584"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409101"
 ---
-# <a name="shared-cannot-be-combined-with-specifier-on-a-property-declaration"></a><span data-ttu-id="df053-102">Impossibile combinare 'Shared' con '\<identificatore >' in una dichiarazione di proprietà</span><span class="sxs-lookup"><span data-stu-id="df053-102">'Shared' cannot be combined with '\<specifier>' on a property declaration</span></span>
-<span data-ttu-id="df053-103">Si è provato a combinare il modificatore `Shared` con un identificatore che non è valido in tale combinazione in una dichiarazione di proprietà.</span><span class="sxs-lookup"><span data-stu-id="df053-103">You have attempted to combine the `Shared` modifier with a specifier that is not valid in such a combination on a property declaration.</span></span>  
+# <a name="shared-cannot-be-combined-with-specifier-on-a-property-declaration"></a><span data-ttu-id="0850d-102">Impossibile combinare 'Shared' con '\<specifier>' in una dichiarazione di proprietà.</span><span class="sxs-lookup"><span data-stu-id="0850d-102">'Shared' cannot be combined with '\<specifier>' on a property declaration</span></span>
+<span data-ttu-id="0850d-103">Si è provato a combinare il modificatore `Shared` con un identificatore che non è valido in tale combinazione in una dichiarazione di proprietà.</span><span class="sxs-lookup"><span data-stu-id="0850d-103">You have attempted to combine the `Shared` modifier with a specifier that is not valid in such a combination on a property declaration.</span></span>  
   
- <span data-ttu-id="df053-104">**ID errore:** BC30502</span><span class="sxs-lookup"><span data-stu-id="df053-104">**Error ID:** BC30502</span></span>  
+ <span data-ttu-id="0850d-104">**ID errore:** BC30502</span><span class="sxs-lookup"><span data-stu-id="0850d-104">**Error ID:** BC30502</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="df053-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="df053-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0850d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0850d-105">To correct this error</span></span>  
   
-- <span data-ttu-id="df053-106">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="df053-106">Remove the specifier.</span></span>  
+- <span data-ttu-id="0850d-106">Rimuovere l'identificatore.</span><span class="sxs-lookup"><span data-stu-id="0850d-106">Remove the specifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="df053-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="df053-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0850d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0850d-107">See also</span></span>
 
-- [<span data-ttu-id="df053-108">Shared</span><span class="sxs-lookup"><span data-stu-id="df053-108">Shared</span></span>](../../visual-basic/language-reference/modifiers/shared.md)
+- [<span data-ttu-id="0850d-108">Condivisa</span><span class="sxs-lookup"><span data-stu-id="0850d-108">Shared</span></span>](../language-reference/modifiers/shared.md)
