--- a/docs/visual-basic/misc/bc30630.md
+++ b/docs/visual-basic/misc/bc30630.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30630
 ms.assetid: d858076a-9088-4ad0-9766-95029476bf9b
-ms.openlocfilehash: 08b4bd568a8231146217fd1eba1df57eba975c44
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: ea11aa99a19e6bbe9a7a9c621d3f65aa7cdfa6dd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61759252"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415232"
 ---
-# <a name="end-get-must-be-preceded-by-a-matching-get"></a><span data-ttu-id="ed930-102">'End Get' deve essere preceduto da un oggetto 'Get' corrispondente</span><span class="sxs-lookup"><span data-stu-id="ed930-102">'End Get' must be preceded by a matching 'Get'</span></span>
-<span data-ttu-id="ed930-103">`End Get` viene usato per terminare le routine della proprietà `Get` .</span><span class="sxs-lookup"><span data-stu-id="ed930-103">`End Get` is used to terminate `Get` property procedures.</span></span> <span data-ttu-id="ed930-104">Il costrutto `End Get` è stato rilevato all'esterno di una routine della proprietà `Get` .</span><span class="sxs-lookup"><span data-stu-id="ed930-104">The `End Get` construct was encountered outside a `Get` property procedure.</span></span>  
+# <a name="end-get-must-be-preceded-by-a-matching-get"></a><span data-ttu-id="b48b8-102">'End Get' deve essere preceduto da un oggetto 'Get' corrispondente</span><span class="sxs-lookup"><span data-stu-id="b48b8-102">'End Get' must be preceded by a matching 'Get'</span></span>
+<span data-ttu-id="b48b8-103">`End Get` viene usato per terminare le routine della proprietà `Get` .</span><span class="sxs-lookup"><span data-stu-id="b48b8-103">`End Get` is used to terminate `Get` property procedures.</span></span> <span data-ttu-id="b48b8-104">Il costrutto `End Get` è stato rilevato all'esterno di una routine della proprietà `Get` .</span><span class="sxs-lookup"><span data-stu-id="b48b8-104">The `End Get` construct was encountered outside a `Get` property procedure.</span></span>  
   
- <span data-ttu-id="ed930-105">**ID errore:** BC30630</span><span class="sxs-lookup"><span data-stu-id="ed930-105">**Error ID:** BC30630</span></span>  
+ <span data-ttu-id="b48b8-105">**ID errore:** BC30630</span><span class="sxs-lookup"><span data-stu-id="b48b8-105">**Error ID:** BC30630</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ed930-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ed930-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b48b8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b48b8-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="ed930-107">Verificare che la routine della proprietà `Get` venga dichiarata dopo una parola chiave `Property` e prima del costrutto `End Property` .</span><span class="sxs-lookup"><span data-stu-id="ed930-107">Make sure that the `Get` property procedure is declared after a `Property` keyword and before the `End Property` construct.</span></span>  
+1. <span data-ttu-id="b48b8-107">Verificare che la routine della proprietà `Get` venga dichiarata dopo una parola chiave `Property` e prima del costrutto `End Property` .</span><span class="sxs-lookup"><span data-stu-id="b48b8-107">Make sure that the `Get` property procedure is declared after a `Property` keyword and before the `End Property` construct.</span></span>  
   
-2. <span data-ttu-id="ed930-108">Verificare che la routine della proprietà `Get` inizi dopo una parola chiave `Get` e termini con il costrutto `End Get` .</span><span class="sxs-lookup"><span data-stu-id="ed930-108">Make sure that the `Get` property procedure begins with the `Get` keyword and ends with `End Get` construct.</span></span>  
+2. <span data-ttu-id="b48b8-108">Verificare che la routine della proprietà `Get` inizi dopo una parola chiave `Get` e termini con il costrutto `End Get` .</span><span class="sxs-lookup"><span data-stu-id="b48b8-108">Make sure that the `Get` property procedure begins with the `Get` keyword and ends with `End Get` construct.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ed930-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ed930-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b48b8-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b48b8-109">See also</span></span>
 
-- [<span data-ttu-id="ed930-110">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="ed930-110">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
+- [<span data-ttu-id="b48b8-110">Property Statement</span><span class="sxs-lookup"><span data-stu-id="b48b8-110">Property Statement</span></span>](../language-reference/statements/property-statement.md)
