--- a/docs/visual-basic/misc/bc30661.md
+++ b/docs/visual-basic/misc/bc30661.md
@@ -1,5 +1,5 @@
 ---
-title: Campo o una proprietà '<membername>' non è stato trovato
+title: Impossibile trovare il campo o la proprietà '<membername>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30661
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30661
 ms.assetid: 6854c427-37e5-4ab8-9731-f9d9e32ffd51
-ms.openlocfilehash: d64a079061661e432e1f0257444258fd474bc502
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 04cb28e1e67a56ee2414a59dbc042d9f3358796c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936591"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414979"
 ---
-# <a name="field-or-property-membername-is-not-found"></a><span data-ttu-id="e53e6-102">Campo o una proprietà '\<nomeMembro >' non è stato trovato</span><span class="sxs-lookup"><span data-stu-id="e53e6-102">Field or property '\<membername>' is not found</span></span>
-<span data-ttu-id="e53e6-103">Viene fatto riferimento a un campo o a una proprietà per l'attributo.</span><span class="sxs-lookup"><span data-stu-id="e53e6-103">An undefined field or property is being referenced for the attribute.</span></span>  
+# <a name="field-or-property-membername-is-not-found"></a><span data-ttu-id="e38a6-102">Impossibile trovare il campo o la proprietà '\<membername>'</span><span class="sxs-lookup"><span data-stu-id="e38a6-102">Field or property '\<membername>' is not found</span></span>
+<span data-ttu-id="e38a6-103">Viene fatto riferimento a un campo o a una proprietà per l'attributo.</span><span class="sxs-lookup"><span data-stu-id="e38a6-103">An undefined field or property is being referenced for the attribute.</span></span>  
   
- <span data-ttu-id="e53e6-104">**ID errore:** BC30661</span><span class="sxs-lookup"><span data-stu-id="e53e6-104">**Error ID:** BC30661</span></span>  
+ <span data-ttu-id="e38a6-104">**ID errore:** BC30661</span><span class="sxs-lookup"><span data-stu-id="e38a6-104">**Error ID:** BC30661</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e53e6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e53e6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e38a6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e38a6-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="e53e6-106">Controllare l'ortografia del campo o della proprietà.</span><span class="sxs-lookup"><span data-stu-id="e53e6-106">Check the spelling of the field or property.</span></span>  
+1. <span data-ttu-id="e38a6-106">Controllare l'ortografia del campo o della proprietà.</span><span class="sxs-lookup"><span data-stu-id="e38a6-106">Check the spelling of the field or property.</span></span>  
   
-2. <span data-ttu-id="e53e6-107">Verificare che il progetto possa accedere alla classe Attribute corretta e aggiungerla ai riferimenti al progetto, se necessario.</span><span class="sxs-lookup"><span data-stu-id="e53e6-107">Verify that your project can access the correct attribute class, and add it to the project references if necessary.</span></span>  
+2. <span data-ttu-id="e38a6-107">Verificare che il progetto possa accedere alla classe Attribute corretta e aggiungerla ai riferimenti al progetto, se necessario.</span><span class="sxs-lookup"><span data-stu-id="e38a6-107">Verify that your project can access the correct attribute class, and add it to the project references if necessary.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e53e6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e53e6-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="e38a6-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e38a6-108">See also</span></span>
 
-- [<span data-ttu-id="e53e6-109">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="e53e6-109">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [<span data-ttu-id="e38a6-109">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="e38a6-109">Imports Statement (.NET Namespace and Type)</span></span>](../language-reference/statements/imports-statement-net-namespace-and-type.md)
