--- a/docs/visual-basic/misc/bc30674.md
+++ b/docs/visual-basic/misc/bc30674.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30674
 ms.assetid: 2d473b0b-ca9e-43b5-9bcb-b00766bc90a4
-ms.openlocfilehash: 06ced6ebd88ae67a9e15e87e664e9afb58c69991
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: bb75cc071d640d4e9728d86052faecb8405f65aa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646399"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414881"
 ---
-# <a name="end-synclock-must-be-preceded-by-a-matching-synclock"></a><span data-ttu-id="28eb0-102">'End SyncLock' deve essere preceduto da un oggetto 'SyncLock' corrispondente</span><span class="sxs-lookup"><span data-stu-id="28eb0-102">'End SyncLock' must be preceded by a matching 'SyncLock'</span></span>
-<span data-ttu-id="28eb0-103">I blocchi`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="28eb0-103">`SyncLock` blocks begin with the `SyncLock` keyword and end with the `End SyncLock` construct.</span></span>  
+# <a name="end-synclock-must-be-preceded-by-a-matching-synclock"></a><span data-ttu-id="fda55-102">'End SyncLock' deve essere preceduto da un oggetto 'SyncLock' corrispondente</span><span class="sxs-lookup"><span data-stu-id="fda55-102">'End SyncLock' must be preceded by a matching 'SyncLock'</span></span>
+<span data-ttu-id="fda55-103">`SyncLock` iniziano con la parola chiave `SyncLock` e terminano con il costrutto `End SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="fda55-103">`SyncLock` blocks begin with the `SyncLock` keyword and end with the `End SyncLock` construct.</span></span>  
   
- <span data-ttu-id="28eb0-104">**ID errore:** BC30674</span><span class="sxs-lookup"><span data-stu-id="28eb0-104">**Error ID:** BC30674</span></span>  
+ <span data-ttu-id="fda55-104">**ID errore:** BC30674</span><span class="sxs-lookup"><span data-stu-id="fda55-104">**Error ID:** BC30674</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="28eb0-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="28eb0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fda55-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="fda55-105">To correct this error</span></span>  
   
-- <span data-ttu-id="28eb0-106">Verificare che il blocco `SyncLock` inizi con un'istruzione `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="28eb0-106">Make sure that the `SyncLock` block begins with a `SyncLock` statement.</span></span>  
+- <span data-ttu-id="fda55-106">Verificare che il blocco `SyncLock` inizi con un'istruzione `SyncLock` .</span><span class="sxs-lookup"><span data-stu-id="fda55-106">Make sure that the `SyncLock` block begins with a `SyncLock` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="28eb0-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="28eb0-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="fda55-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="fda55-107">See also</span></span>
 
-- [<span data-ttu-id="28eb0-108">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="28eb0-108">SyncLock Statement</span></span>](../../visual-basic/language-reference/statements/synclock-statement.md)
+- [<span data-ttu-id="fda55-108">Istruzione SyncLock</span><span class="sxs-lookup"><span data-stu-id="fda55-108">SyncLock Statement</span></span>](../language-reference/statements/synclock-statement.md)
