--- a/docs/visual-basic/misc/bc30827.md
+++ b/docs/visual-basic/misc/bc30827.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30827
 ms.assetid: 577f8c0b-9e8a-433f-b504-9ddaa936c250
-ms.openlocfilehash: 8a0c27cdb758276a98ed45a3137066a36e449a38
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 900b7c1b921aadbfde9f294c6af8a45d39cf41ca
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352804"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408289"
 ---
-# <a name="d-can-no-longer-be-used-to-indicate-an-exponent-use-e-instead"></a><span data-ttu-id="43e45-102">Non è più possibile utilizzare 'D' per indicare un esponente. Utilizzare 'E'</span><span class="sxs-lookup"><span data-stu-id="43e45-102">'D' can no longer be used to indicate an exponent, use 'E' instead</span></span>
-<span data-ttu-id="43e45-103">Il carattere 'D' non può essere utilizzato per indicare un esponente.</span><span class="sxs-lookup"><span data-stu-id="43e45-103">The 'D' character cannot be used to indicate exponentiation.</span></span>  
+# <a name="d-can-no-longer-be-used-to-indicate-an-exponent-use-e-instead"></a><span data-ttu-id="81a89-102">Non è più possibile utilizzare 'D' per indicare un esponente. Utilizzare 'E'</span><span class="sxs-lookup"><span data-stu-id="81a89-102">'D' can no longer be used to indicate an exponent, use 'E' instead</span></span>
+<span data-ttu-id="81a89-103">Il carattere 'D' non può essere utilizzato per indicare un esponente.</span><span class="sxs-lookup"><span data-stu-id="81a89-103">The 'D' character cannot be used to indicate exponentiation.</span></span>  
   
- <span data-ttu-id="43e45-104">**ID errore:** BC30827</span><span class="sxs-lookup"><span data-stu-id="43e45-104">**Error ID:** BC30827</span></span>  
+ <span data-ttu-id="81a89-104">**ID errore:** BC30827</span><span class="sxs-lookup"><span data-stu-id="81a89-104">**Error ID:** BC30827</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="43e45-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="43e45-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="81a89-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="81a89-105">To correct this error</span></span>  
   
-- <span data-ttu-id="43e45-106">Usare l'operatore `^` o i caratteri `E+` per indicare che è presente un esponente.</span><span class="sxs-lookup"><span data-stu-id="43e45-106">Use the `^` operator or `E+` characters to indicate an exponent is present.</span></span> <span data-ttu-id="43e45-107">Esempio:</span><span class="sxs-lookup"><span data-stu-id="43e45-107">For example:</span></span>  
+- <span data-ttu-id="81a89-106">Usare l'operatore `^` o i caratteri `E+` per indicare che è presente un esponente.</span><span class="sxs-lookup"><span data-stu-id="81a89-106">Use the `^` operator or `E+` characters to indicate an exponent is present.</span></span> <span data-ttu-id="81a89-107">Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="81a89-107">For example:</span></span>  
   
     ```vb  
     Const Mole = 6.02E+23 ' Same as 6.02D23  
     Const Mole2 = 6.02 * 10 ^ 23 ' Same as 6.02D23  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="43e45-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="43e45-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="81a89-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="81a89-108">See also</span></span>
 
-- [<span data-ttu-id="43e45-109">Operatore ^</span><span class="sxs-lookup"><span data-stu-id="43e45-109">^ Operator</span></span>](../../visual-basic/language-reference/operators/exponentiation-operator.md)
-- [<span data-ttu-id="43e45-110">Tipi di dati numerici</span><span class="sxs-lookup"><span data-stu-id="43e45-110">Numeric Data Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/numeric-data-types.md)
+- [<span data-ttu-id="81a89-109">Operatore ^</span><span class="sxs-lookup"><span data-stu-id="81a89-109">^ Operator</span></span>](../language-reference/operators/exponentiation-operator.md)
+- [<span data-ttu-id="81a89-110">Tipi di dati numerici</span><span class="sxs-lookup"><span data-stu-id="81a89-110">Numeric Data Types</span></span>](../programming-guide/language-features/data-types/numeric-data-types.md)
