--- a/docs/visual-basic/misc/bc31051.md
+++ b/docs/visual-basic/misc/bc31051.md
@@ -1,5 +1,5 @@
 ---
-title: Namespace o di tipo '<name>' è già stato importato
+title: Lo spazio dei nomi o il tipo '<name>' è già stato importato
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31051
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31051
 ms.assetid: e10f9047-6de5-486c-9c6d-bcbad03f824c
-ms.openlocfilehash: b9607afd8d805a6a0feadc109100baf49d09ff89
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3a1bb8713a48831fbb403b385841059ed93f996e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64601795"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399631"
 ---
-# <a name="namespace-or-type-name-has-already-been-imported"></a><span data-ttu-id="439da-102">Namespace o di tipo '\<nome >' è già stato importato</span><span class="sxs-lookup"><span data-stu-id="439da-102">Namespace or type '\<name>' has already been imported</span></span>
-<span data-ttu-id="439da-103">Si è provato a importare più volte uno spazio dei nomi.</span><span class="sxs-lookup"><span data-stu-id="439da-103">An attempt was made to import a namespace more than once.</span></span>  
+# <a name="namespace-or-type-name-has-already-been-imported"></a><span data-ttu-id="305b8-102">Lo spazio dei nomi o il tipo '\<name>' è già stato importato</span><span class="sxs-lookup"><span data-stu-id="305b8-102">Namespace or type '\<name>' has already been imported</span></span>
+<span data-ttu-id="305b8-103">Si è provato a importare più volte uno spazio dei nomi.</span><span class="sxs-lookup"><span data-stu-id="305b8-103">An attempt was made to import a namespace more than once.</span></span>  
   
- <span data-ttu-id="439da-104">**ID errore:** BC31051</span><span class="sxs-lookup"><span data-stu-id="439da-104">**Error ID:** BC31051</span></span>  
+ <span data-ttu-id="305b8-104">**ID errore:** BC31051</span><span class="sxs-lookup"><span data-stu-id="305b8-104">**Error ID:** BC31051</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="439da-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="439da-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="305b8-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="305b8-105">To correct this error</span></span>  
   
-- <span data-ttu-id="439da-106">Rimuovere le istruzioni `Imports` ridondanti.</span><span class="sxs-lookup"><span data-stu-id="439da-106">Remove redundant `Imports` statements.</span></span>  
+- <span data-ttu-id="305b8-106">Rimuovere le istruzioni `Imports` ridondanti.</span><span class="sxs-lookup"><span data-stu-id="305b8-106">Remove redundant `Imports` statements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="439da-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="439da-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="305b8-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="305b8-107">See also</span></span>
 
-- [<span data-ttu-id="439da-108">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="439da-108">Imports Statement (.NET Namespace and Type)</span></span>](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md)
+- [<span data-ttu-id="305b8-108">Istruzione Imports (tipo e spazio dei nomi .NET)</span><span class="sxs-lookup"><span data-stu-id="305b8-108">Imports Statement (.NET Namespace and Type)</span></span>](../language-reference/statements/imports-statement-net-namespace-and-type.md)
