--- a/docs/visual-basic/misc/bc31064.md
+++ b/docs/visual-basic/misc/bc31064.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC31064
 ms.assetid: f0b8310d-68a1-4989-ac64-03b1861528ad
-ms.openlocfilehash: 05f1f7d35423c7bf10294d1be956fac6b999cdf6
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: b13fa5b7971f5856dc92c978d74f0a9ca52b6570
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352344"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405859"
 ---
-# <a name="set-parameter-must-have-the-same-type-as-the-containing-property"></a><span data-ttu-id="99ee5-102">Il parametro 'Set' deve essere dello stesso tipo della proprietà che lo contiene</span><span class="sxs-lookup"><span data-stu-id="99ee5-102">'Set' parameter must have the same type as the containing property</span></span>
-<span data-ttu-id="99ee5-103">Il parametro per la routine di proprietà `Set` presenta un tipo diverso dalla proprietà a cui appartiene.</span><span class="sxs-lookup"><span data-stu-id="99ee5-103">The parameter for the `Set` property procedure has a different type from the property that it belongs to.</span></span>  
+# <a name="set-parameter-must-have-the-same-type-as-the-containing-property"></a><span data-ttu-id="d7f14-102">Il parametro 'Set' deve essere dello stesso tipo della proprietà che lo contiene</span><span class="sxs-lookup"><span data-stu-id="d7f14-102">'Set' parameter must have the same type as the containing property</span></span>
+<span data-ttu-id="d7f14-103">Il parametro per la routine di proprietà `Set` presenta un tipo diverso dalla proprietà a cui appartiene.</span><span class="sxs-lookup"><span data-stu-id="d7f14-103">The parameter for the `Set` property procedure has a different type from the property that it belongs to.</span></span>  
   
- <span data-ttu-id="99ee5-104">**ID errore:** BC31064</span><span class="sxs-lookup"><span data-stu-id="99ee5-104">**Error ID:** BC31064</span></span>  
+ <span data-ttu-id="d7f14-104">**ID errore:** BC31064</span><span class="sxs-lookup"><span data-stu-id="d7f14-104">**Error ID:** BC31064</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="99ee5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="99ee5-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d7f14-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d7f14-105">To correct this error</span></span>  
   
-- <span data-ttu-id="99ee5-106">Modificare il tipo di dati del parametro su `Set` in modo che corrisponda al tipo di dati per la proprietà.</span><span class="sxs-lookup"><span data-stu-id="99ee5-106">Change the data type of the parameter to `Set` so that it matches the data type for the property.</span></span> <span data-ttu-id="99ee5-107">Esempio:</span><span class="sxs-lookup"><span data-stu-id="99ee5-107">For example:</span></span>  
+- <span data-ttu-id="d7f14-106">Modificare il tipo di dati del parametro su `Set` in modo che corrisponda al tipo di dati per la proprietà.</span><span class="sxs-lookup"><span data-stu-id="d7f14-106">Change the data type of the parameter to `Set` so that it matches the data type for the property.</span></span> <span data-ttu-id="d7f14-107">Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="d7f14-107">For example:</span></span>  
   
     ```vb  
     Class Class1  
@@ -39,6 +39,6 @@ ms.locfileid: "71352344"
     End Class  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="99ee5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="99ee5-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d7f14-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d7f14-108">See also</span></span>
 
-- [<span data-ttu-id="99ee5-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="99ee5-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="d7f14-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="d7f14-109">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
