--- a/docs/visual-basic/misc/bc31085.md
+++ b/docs/visual-basic/misc/bc31085.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31085
 ms.assetid: 354e4c02-ca5f-4c27-93f9-50f5f1ad6be5
-ms.openlocfilehash: a801b2787431bda01e451bd5ffc786e140621e59
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9e3783bf448c34bdab3a2b579673191fc1ade6c7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64649053"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399527"
 ---
-# <a name="date-constant-is-not-valid"></a><span data-ttu-id="33f69-102">La costante di data non è valida</span><span class="sxs-lookup"><span data-stu-id="33f69-102">Date constant is not valid</span></span>
-<span data-ttu-id="33f69-103">Una costante di data è dichiarata con una data non valida.</span><span class="sxs-lookup"><span data-stu-id="33f69-103">A date constant is declared with an invalid date.</span></span>  
+# <a name="date-constant-is-not-valid"></a><span data-ttu-id="7f942-102">La costante di data non è valida</span><span class="sxs-lookup"><span data-stu-id="7f942-102">Date constant is not valid</span></span>
+<span data-ttu-id="7f942-103">Una costante di data è dichiarata con una data non valida.</span><span class="sxs-lookup"><span data-stu-id="7f942-103">A date constant is declared with an invalid date.</span></span>  
   
- <span data-ttu-id="33f69-104">**ID errore:** BC31085</span><span class="sxs-lookup"><span data-stu-id="33f69-104">**Error ID:** BC31085</span></span>  
+ <span data-ttu-id="7f942-104">**ID errore:** BC31085</span><span class="sxs-lookup"><span data-stu-id="7f942-104">**Error ID:** BC31085</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="33f69-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="33f69-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7f942-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="7f942-105">To correct this error</span></span>  
   
-- <span data-ttu-id="33f69-106">Correggere la data usata nella costante.</span><span class="sxs-lookup"><span data-stu-id="33f69-106">Correct the date used in the constant.</span></span>  
+- <span data-ttu-id="7f942-106">Correggere la data usata nella costante.</span><span class="sxs-lookup"><span data-stu-id="7f942-106">Correct the date used in the constant.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="33f69-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="33f69-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="7f942-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="7f942-107">See also</span></span>
 
-- [<span data-ttu-id="33f69-108">Tipo di dati Date</span><span class="sxs-lookup"><span data-stu-id="33f69-108">Date Data Type</span></span>](../../visual-basic/language-reference/data-types/date-data-type.md)
-- [<span data-ttu-id="33f69-109">Costanti ed enumerazioni</span><span class="sxs-lookup"><span data-stu-id="33f69-109">Constants and Enumerations</span></span>](../../visual-basic/language-reference/constants-and-enumerations.md)
+- [<span data-ttu-id="7f942-108">Tipo di dati Date</span><span class="sxs-lookup"><span data-stu-id="7f942-108">Date Data Type</span></span>](../language-reference/data-types/date-data-type.md)
+- [<span data-ttu-id="7f942-109">Costanti ed enumerazioni</span><span class="sxs-lookup"><span data-stu-id="7f942-109">Constants and Enumerations</span></span>](../language-reference/constants-and-enumerations.md)
