--- a/docs/visual-basic/misc/bc31123.md
+++ b/docs/visual-basic/misc/bc31123.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC31123
 ms.assetid: 8dbffccc-c1ba-45f5-a1b4-90889bb0a3fd
-ms.openlocfilehash: 7a111243c1778508e760a2b3105b19a7b108a1e5
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: cd9d0c7390e3b3af0cbace17084eafb865a0f2d2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585089"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405573"
 ---
-# <a name="end-event-must-be-preceded-by-a-matching-custom-event"></a><span data-ttu-id="458bd-102">'End Event' deve essere preceduto da un oggetto 'Custom Event' corrispondente</span><span class="sxs-lookup"><span data-stu-id="458bd-102">'End Event' must be preceded by a matching 'Custom Event'</span></span>
-<span data-ttu-id="458bd-103">Un'istruzione `End Event` si verifica senza un'istruzione `Custom Event` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="458bd-103">An `End Event` statement occurs without a corresponding `Custom Event` statement.</span></span> <span data-ttu-id="458bd-104">`End Event` deve essere preceduto da un'istruzione `Custom Event` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="458bd-104">`End Event` must be preceded by a corresponding `Custom Event` statement.</span></span>  
+# <a name="end-event-must-be-preceded-by-a-matching-custom-event"></a><span data-ttu-id="eae94-102">'End Event' deve essere preceduto da un oggetto 'Custom Event' corrispondente</span><span class="sxs-lookup"><span data-stu-id="eae94-102">'End Event' must be preceded by a matching 'Custom Event'</span></span>
+<span data-ttu-id="eae94-103">Un'istruzione `End Event` si verifica senza un'istruzione `Custom Event` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="eae94-103">An `End Event` statement occurs without a corresponding `Custom Event` statement.</span></span> <span data-ttu-id="eae94-104">`End Event` deve essere preceduto da un'istruzione `Custom Event` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="eae94-104">`End Event` must be preceded by a corresponding `Custom Event` statement.</span></span>  
   
- <span data-ttu-id="458bd-105">**ID errore:** BC31123</span><span class="sxs-lookup"><span data-stu-id="458bd-105">**Error ID:** BC31123</span></span>  
+ <span data-ttu-id="eae94-105">**ID errore:** BC31123</span><span class="sxs-lookup"><span data-stu-id="eae94-105">**Error ID:** BC31123</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="458bd-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="458bd-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="eae94-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="eae94-106">To correct this error</span></span>  
   
-- <span data-ttu-id="458bd-107">Verificare che l'istruzione `Custom Event` precedente sia valida e sia stata digitata correttamente.</span><span class="sxs-lookup"><span data-stu-id="458bd-107">Ensure that a preceding `Custom Event` statement is valid and correctly spelled.</span></span>  
+- <span data-ttu-id="eae94-107">Verificare che l'istruzione `Custom Event` precedente sia valida e sia stata digitata correttamente.</span><span class="sxs-lookup"><span data-stu-id="eae94-107">Ensure that a preceding `Custom Event` statement is valid and correctly spelled.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="458bd-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="458bd-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="eae94-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="eae94-108">See also</span></span>
 
-- [<span data-ttu-id="458bd-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="458bd-109">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="eae94-109">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="eae94-109">Event Statement</span></span>](../language-reference/statements/event-statement.md)
