--- a/docs/visual-basic/misc/bc32081.md
+++ b/docs/visual-basic/misc/bc32081.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC32081
 ms.assetid: afcb30da-3973-4452-9cf3-c027f9866589
-ms.openlocfilehash: c32ecd38ca1306f2542639c4a6db75b87b3b3c0c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 667d953b46de12a65d1d648fed6e69e668c90393
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618707"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365488"
 ---
-# <a name="new-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="751ce-102">Non è possibile specificare il vincolo 'New' più volte per lo stesso parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="751ce-102">'New' constraint cannot be specified multiple times for the same type parameter</span></span>
-<span data-ttu-id="751ce-103">Un elenco di vincoli include il [operatore New](../../visual-basic/language-reference/operators/new-operator.md) vincoli più volte.</span><span class="sxs-lookup"><span data-stu-id="751ce-103">A constraint list includes the [New Operator](../../visual-basic/language-reference/operators/new-operator.md) constraint more than once.</span></span>  
+# <a name="new-constraint-cannot-be-specified-multiple-times-for-the-same-type-parameter"></a><span data-ttu-id="47b1d-102">Non è possibile specificare il vincolo 'New' più volte per lo stesso parametro di tipo</span><span class="sxs-lookup"><span data-stu-id="47b1d-102">'New' constraint cannot be specified multiple times for the same type parameter</span></span>
+<span data-ttu-id="47b1d-103">Un elenco di vincoli include il [nuovo vincolo operator](../language-reference/operators/new-operator.md) più di una volta.</span><span class="sxs-lookup"><span data-stu-id="47b1d-103">A constraint list includes the [New Operator](../language-reference/operators/new-operator.md) constraint more than once.</span></span>  
   
- <span data-ttu-id="751ce-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato al parametro di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="751ce-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="751ce-105">Un tipo non può contenere più di un costruttore senza parametri e non è possibile specificare questo requisito più di una volta.</span><span class="sxs-lookup"><span data-stu-id="751ce-105">A type cannot have more than one parameterless constructor, and you cannot specify this requirement more than once.</span></span>  
+ <span data-ttu-id="47b1d-104">Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato al parametro di tipo deve esporre un costruttore senza parametri al quale il codice di creazione può accedere.</span><span class="sxs-lookup"><span data-stu-id="47b1d-104">A constraint list on a type parameter can specify that the type argument passed to that type parameter must expose a parameterless constructor that the creating code can access.</span></span> <span data-ttu-id="47b1d-105">Un tipo non può contenere più di un costruttore senza parametri e non è possibile specificare questo requisito più di una volta.</span><span class="sxs-lookup"><span data-stu-id="47b1d-105">A type cannot have more than one parameterless constructor, and you cannot specify this requirement more than once.</span></span>  
   
- <span data-ttu-id="751ce-106">**ID errore:** BC32081</span><span class="sxs-lookup"><span data-stu-id="751ce-106">**Error ID:** BC32081</span></span>  
+ <span data-ttu-id="47b1d-106">**ID errore:** BC32081</span><span class="sxs-lookup"><span data-stu-id="47b1d-106">**Error ID:** BC32081</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="751ce-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="751ce-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="47b1d-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="47b1d-107">To correct this error</span></span>  
   
-- <span data-ttu-id="751ce-108">Rimuovere qualsiasi parola chiave `New` ridondante.</span><span class="sxs-lookup"><span data-stu-id="751ce-108">Remove any redundant `New` keywords.</span></span> <span data-ttu-id="751ce-109">L'elenco di vincoli deve contenerne solo una.</span><span class="sxs-lookup"><span data-stu-id="751ce-109">You should have only one in the constraint list.</span></span>  
+- <span data-ttu-id="47b1d-108">Rimuovere qualsiasi parola chiave `New` ridondante.</span><span class="sxs-lookup"><span data-stu-id="47b1d-108">Remove any redundant `New` keywords.</span></span> <span data-ttu-id="47b1d-109">L'elenco di vincoli deve contenerne solo una.</span><span class="sxs-lookup"><span data-stu-id="47b1d-109">You should have only one in the constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="751ce-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="751ce-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="47b1d-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="47b1d-110">See also</span></span>
 
-- [<span data-ttu-id="751ce-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="751ce-111">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="47b1d-111">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="47b1d-111">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
