--- a/docs/visual-basic/misc/bc32082.md
+++ b/docs/visual-basic/misc/bc32082.md
@@ -1,5 +1,5 @@
 ---
-title: Argomento di tipo '<typeargumentname>'è dichiarato 'come MustInherit' e non soddisfa il vincolo 'New' per il parametro di tipo'<typeparametername>'
+title: L'argomento di tipo ' <typeargumentname> ' è dichiarato come ' MustInherit ' e non soddisfa il vincolo ' New ' per il parametro di tipo ' <typeparametername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc32082
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC32082
 ms.assetid: 597e5944-a61b-4858-ada5-efb80b27f26b
-ms.openlocfilehash: 0c740566d97c5a5c32f213e92c4d2d6cf05e4922
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 634cecbc5dfa1ab5c8556c4755525c58ea67b3b2
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61943481"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84365410"
 ---
-# <a name="type-argument-typeargumentname-is-declared-mustinherit-and-does-not-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="e3c1b-102">Argomento di tipo '\<nomeargomentotipo >' è dichiarato 'come MustInherit' e non soddisfa il vincolo 'New' per il parametro di tipo '\<nomeparametrotipo >'</span><span class="sxs-lookup"><span data-stu-id="e3c1b-102">Type argument '\<typeargumentname>' is declared 'MustInherit' and does not satisfy the 'New' constraint for type parameter '\<typeparametername>'</span></span>
-<span data-ttu-id="e3c1b-103">Un tipo generico viene richiamato con una classe `MustInherit` come argomento di tipo, ma il parametro di tipo corrispondente viene dichiarato con il vincolo `New` .</span><span class="sxs-lookup"><span data-stu-id="e3c1b-103">A generic type is invoked with a `MustInherit` class as a type argument, while the corresponding type parameter is declared with the `New` constraint.</span></span>  
+# <a name="type-argument-typeargumentname-is-declared-mustinherit-and-does-not-satisfy-the-new-constraint-for-type-parameter-typeparametername"></a><span data-ttu-id="1bd91-102">L'argomento di tipo ' \<typeargumentname> ' è dichiarato come ' MustInherit ' e non soddisfa il vincolo ' New ' per il parametro di tipo ' \<typeparametername> '</span><span class="sxs-lookup"><span data-stu-id="1bd91-102">Type argument '\<typeargumentname>' is declared 'MustInherit' and does not satisfy the 'New' constraint for type parameter '\<typeparametername>'</span></span>
+<span data-ttu-id="1bd91-103">Un tipo generico viene richiamato con una classe `MustInherit` come argomento di tipo, ma il parametro di tipo corrispondente viene dichiarato con il vincolo `New` .</span><span class="sxs-lookup"><span data-stu-id="1bd91-103">A generic type is invoked with a `MustInherit` class as a type argument, while the corresponding type parameter is declared with the `New` constraint.</span></span>  
   
- <span data-ttu-id="e3c1b-104">Il vincolo `New` richiede che il tipo passato nell'argomento di tipo corrispondente debba supportare la creazione di oggetti.</span><span class="sxs-lookup"><span data-stu-id="e3c1b-104">The `New` constraint requires that the type passed in the corresponding type argument must support the creation of objects.</span></span> <span data-ttu-id="e3c1b-105">Tuttavia, una classe *astratta* , ovvero una classe dichiarata come `MustInherit`, non espone alcun costruttore perché non è possibile creare tutti gli oggetti in base ad essa.</span><span class="sxs-lookup"><span data-stu-id="e3c1b-105">However, an *abstract* class, that is, a class declared as `MustInherit`, does not expose any constructors because you cannot create any objects from it.</span></span>  
+ <span data-ttu-id="1bd91-104">Il vincolo `New` richiede che il tipo passato nell'argomento di tipo corrispondente debba supportare la creazione di oggetti.</span><span class="sxs-lookup"><span data-stu-id="1bd91-104">The `New` constraint requires that the type passed in the corresponding type argument must support the creation of objects.</span></span> <span data-ttu-id="1bd91-105">Tuttavia, una classe *astratta* , ovvero una classe dichiarata come `MustInherit`, non espone alcun costruttore perché non è possibile creare tutti gli oggetti in base ad essa.</span><span class="sxs-lookup"><span data-stu-id="1bd91-105">However, an *abstract* class, that is, a class declared as `MustInherit`, does not expose any constructors because you cannot create any objects from it.</span></span>  
   
- <span data-ttu-id="e3c1b-106">**ID errore:** BC32082</span><span class="sxs-lookup"><span data-stu-id="e3c1b-106">**Error ID:** BC32082</span></span>  
+ <span data-ttu-id="1bd91-106">**ID errore:** BC32082</span><span class="sxs-lookup"><span data-stu-id="1bd91-106">**Error ID:** BC32082</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e3c1b-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e3c1b-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="1bd91-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1bd91-107">To correct this error</span></span>  
   
-1. <span data-ttu-id="e3c1b-108">Se la classe usata nell'argomento di tipo non deve essere astratta, rimuovere la parola chiave `MustInherit` dalla relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="e3c1b-108">If the class used in the type argument does not need to be abstract, then remove the `MustInherit` keyword from its declaration.</span></span>  
+1. <span data-ttu-id="1bd91-108">Se la classe usata nell'argomento di tipo non deve essere astratta, rimuovere la parola chiave `MustInherit` dalla relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="1bd91-108">If the class used in the type argument does not need to be abstract, then remove the `MustInherit` keyword from its declaration.</span></span>  
   
-2. <span data-ttu-id="e3c1b-109">Se la classe usata nell'argomento di tipo deve essere astratta, ma non è necessario usarla per costruire il tipo generico, passare una classe diversa nell'argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="e3c1b-109">If the class used in the type argument needs to be abstract but does not need to be used to construct the generic type, then pass a different class in the type argument.</span></span>  
+2. <span data-ttu-id="1bd91-109">Se la classe usata nell'argomento di tipo deve essere astratta, ma non è necessario usarla per costruire il tipo generico, passare una classe diversa nell'argomento di tipo.</span><span class="sxs-lookup"><span data-stu-id="1bd91-109">If the class used in the type argument needs to be abstract but does not need to be used to construct the generic type, then pass a different class in the type argument.</span></span>  
   
-3. <span data-ttu-id="e3c1b-110">Se il parametro di tipo corrispondente non deve creare alcun oggetto in base al tipo passato, rimuovere il vincolo `New` dalla relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="e3c1b-110">If the corresponding type parameter does not need to create any objects from the type passed to it, then remove the `New` constraint from its declaration.</span></span>  
+3. <span data-ttu-id="1bd91-110">Se il parametro di tipo corrispondente non deve creare alcun oggetto in base al tipo passato, rimuovere il vincolo `New` dalla relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="1bd91-110">If the corresponding type parameter does not need to create any objects from the type passed to it, then remove the `New` constraint from its declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e3c1b-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e3c1b-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1bd91-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1bd91-111">See also</span></span>
 
-- [<span data-ttu-id="e3c1b-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e3c1b-112">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [<span data-ttu-id="e3c1b-113">Operatore New</span><span class="sxs-lookup"><span data-stu-id="e3c1b-113">New Operator</span></span>](../../visual-basic/language-reference/operators/new-operator.md)
-- [<span data-ttu-id="e3c1b-114">MustInherit</span><span class="sxs-lookup"><span data-stu-id="e3c1b-114">MustInherit</span></span>](../../visual-basic/language-reference/modifiers/mustinherit.md)
+- [<span data-ttu-id="1bd91-112">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="1bd91-112">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="1bd91-113">Operatore New</span><span class="sxs-lookup"><span data-stu-id="1bd91-113">New Operator</span></span>](../language-reference/operators/new-operator.md)
+- [<span data-ttu-id="1bd91-114">MustInherit</span><span class="sxs-lookup"><span data-stu-id="1bd91-114">MustInherit</span></span>](../language-reference/modifiers/mustinherit.md)
