--- a/docs/visual-basic/misc/bc32127.md
+++ b/docs/visual-basic/misc/bc32127.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC32127
 ms.assetid: 68b745b5-8605-4bf3-a6ec-69e67b3cff2d
-ms.openlocfilehash: acef71b8f1b6d329c526577b7eec24713382f3d2
-ms.sourcegitcommit: 99b153b93bf94d0fecf7c7bcecb58ac424dfa47c
+ms.openlocfilehash: 605f7541a99c194d58c6e255a000aeea86e10efd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/25/2020
-ms.locfileid: "80249025"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84402486"
 ---
-# <a name="is-operand-of-type-typename-can-only-be-compared-to-nothing-because-typename-is-a-nullable-type"></a><span data-ttu-id="3f030-102">È possibile confrontare l'operando 'Is' del tipo 'typename' solo con 'Nothing' perché 'typename' è un tipo nullable</span><span class="sxs-lookup"><span data-stu-id="3f030-102">'Is' operand of type 'typename' can only be compared to 'Nothing', because 'typename' is a nullable type</span></span>
-<span data-ttu-id="3f030-103">Una variabile dichiarata come nullable è stata confrontata con un'espressione diversa da `Nothing` mediante l'operatore `Is` .</span><span class="sxs-lookup"><span data-stu-id="3f030-103">A variable declared as nullable has been compared to an expression other than `Nothing` by using the `Is` operator.</span></span>  
+# <a name="is-operand-of-type-typename-can-only-be-compared-to-nothing-because-typename-is-a-nullable-type"></a><span data-ttu-id="1a821-102">È possibile confrontare l'operando 'Is' del tipo 'typename' solo con 'Nothing' perché 'typename' è un tipo nullable</span><span class="sxs-lookup"><span data-stu-id="1a821-102">'Is' operand of type 'typename' can only be compared to 'Nothing', because 'typename' is a nullable type</span></span>
+<span data-ttu-id="1a821-103">Una variabile dichiarata come nullable è stata confrontata con un'espressione diversa da `Nothing` mediante l'operatore `Is` .</span><span class="sxs-lookup"><span data-stu-id="1a821-103">A variable declared as nullable has been compared to an expression other than `Nothing` by using the `Is` operator.</span></span>  
   
- <span data-ttu-id="3f030-104">**ID errore:** BC32127</span><span class="sxs-lookup"><span data-stu-id="3f030-104">**Error ID:** BC32127</span></span>  
+ <span data-ttu-id="1a821-104">**ID errore:** BC32127</span><span class="sxs-lookup"><span data-stu-id="1a821-104">**Error ID:** BC32127</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3f030-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3f030-105">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="1a821-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1a821-105">To correct this error</span></span>
   
-1. <span data-ttu-id="3f030-106">Per confrontare un tipo di valore `Nothing` nullable `Is` con un'espressione diversa dall'utilizzo dell'operatore, chiamare il `GetType` metodo sul tipo di valore nullable e confrontare il risultato con l'espressione, come illustrato nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="3f030-106">To compare a nullable value type to an expression other than `Nothing` by using the `Is` operator, call the `GetType` method on the nullable value type and compare the result to the expression, as shown in the following example.</span></span>  
+1. <span data-ttu-id="1a821-106">Per confrontare un tipo di valore nullable con un'espressione diversa `Nothing` da usando l' `Is` operatore, chiamare il `GetType` metodo sul tipo di valore nullable e confrontare il risultato con l'espressione, come illustrato nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="1a821-106">To compare a nullable value type to an expression other than `Nothing` by using the `Is` operator, call the `GetType` method on the nullable value type and compare the result to the expression, as shown in the following example.</span></span>  
   
 ```vb  
 Dim number? As Integer = 5  
@@ -33,7 +33,7 @@ If number IsNot Nothing Then
 End If  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="3f030-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3f030-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="1a821-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1a821-107">See also</span></span>
 
-- [<span data-ttu-id="3f030-108">Tipi di valore nullableNullable Value Types</span><span class="sxs-lookup"><span data-stu-id="3f030-108">Nullable Value Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/nullable-value-types.md)
-- [<span data-ttu-id="3f030-109">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="3f030-109">Is Operator</span></span>](../../visual-basic/language-reference/operators/is-operator.md)
+- [<span data-ttu-id="1a821-108">Tipi di valore Nullable</span><span class="sxs-lookup"><span data-stu-id="1a821-108">Nullable Value Types</span></span>](../programming-guide/language-features/data-types/nullable-value-types.md)
+- [<span data-ttu-id="1a821-109">Operatore Is</span><span class="sxs-lookup"><span data-stu-id="1a821-109">Is Operator</span></span>](../language-reference/operators/is-operator.md)
