--- a/docs/visual-basic/misc/bc33004.md
+++ b/docs/visual-basic/misc/bc33004.md
@@ -7,30 +7,30 @@ f1_keywords:
 helpviewer_keywords:
 - BC33004
 ms.assetid: 22f27f4d-4bbd-4f8f-a6e8-0fc10efb268d
-ms.openlocfilehash: 5bae7490b901698ad376662a314c5d4a72bfc702
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 140c04b3193050b4140ce28e2aef10aa9eede70e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64648903"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385431"
 ---
-# <a name="implements-is-not-valid-on-operator-declaration"></a><span data-ttu-id="9c2ff-102">Implements' non è valido nelle dichiarazioni di operatore</span><span class="sxs-lookup"><span data-stu-id="9c2ff-102">'Implements' is not valid on operator declaration</span></span>
-<span data-ttu-id="9c2ff-103">Un' [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) specifica la parola chiave [Implements](../../visual-basic/language-reference/statements/implements-clause.md) .</span><span class="sxs-lookup"><span data-stu-id="9c2ff-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) specifies the [Implements](../../visual-basic/language-reference/statements/implements-clause.md) keyword.</span></span>  
+# <a name="implements-is-not-valid-on-operator-declaration"></a><span data-ttu-id="592bc-102">Implements' non è valido nelle dichiarazioni di operatore</span><span class="sxs-lookup"><span data-stu-id="592bc-102">'Implements' is not valid on operator declaration</span></span>
+<span data-ttu-id="592bc-103">Un' [Operator Statement](../language-reference/statements/operator-statement.md) specifica la parola chiave [Implements](../language-reference/statements/implements-clause.md) .</span><span class="sxs-lookup"><span data-stu-id="592bc-103">An [Operator Statement](../language-reference/statements/operator-statement.md) specifies the [Implements](../language-reference/statements/implements-clause.md) keyword.</span></span>  
   
- <span data-ttu-id="9c2ff-104">Solo una routine `Function` o `Sub` , una proprietà o un evento può implementare un membro di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="9c2ff-104">Only a `Function` or `Sub` procedure, a property, or an event can implement an interface member.</span></span> <span data-ttu-id="9c2ff-105">Per altre informazioni sull'implementazione, vedere.</span><span class="sxs-lookup"><span data-stu-id="9c2ff-105">For more information on implementation, see .</span></span>  
+ <span data-ttu-id="592bc-104">Solo una routine `Function` o `Sub` , una proprietà o un evento può implementare un membro di interfaccia.</span><span class="sxs-lookup"><span data-stu-id="592bc-104">Only a `Function` or `Sub` procedure, a property, or an event can implement an interface member.</span></span> <span data-ttu-id="592bc-105">Per ulteriori informazioni sull'implementazione di, vedere.</span><span class="sxs-lookup"><span data-stu-id="592bc-105">For more information on implementation, see .</span></span>  
   
- <span data-ttu-id="9c2ff-106">Una routine `Operator` richiede le parole chiave `Public` e `Shared` e un operatore di conversione richiede la parola chiave `Widening` o `Narrowing` .</span><span class="sxs-lookup"><span data-stu-id="9c2ff-106">An `Operator` procedure requires both the `Public` and `Shared` keywords, and a conversion operator requires either the `Widening` or the `Narrowing` keyword.</span></span> <span data-ttu-id="9c2ff-107">Per altre informazioni, vedere [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="9c2ff-107">For more information, see [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md).</span></span>  
+ <span data-ttu-id="592bc-106">Una routine `Operator` richiede le parole chiave `Public` e `Shared` e un operatore di conversione richiede la parola chiave `Widening` o `Narrowing` .</span><span class="sxs-lookup"><span data-stu-id="592bc-106">An `Operator` procedure requires both the `Public` and `Shared` keywords, and a conversion operator requires either the `Widening` or the `Narrowing` keyword.</span></span> <span data-ttu-id="592bc-107">Per altre informazioni, vedere [Operator Procedures](../programming-guide/language-features/procedures/operator-procedures.md).</span><span class="sxs-lookup"><span data-stu-id="592bc-107">For more information, see [Operator Procedures](../programming-guide/language-features/procedures/operator-procedures.md).</span></span>  
   
- <span data-ttu-id="9c2ff-108">**ID errore:** BC33004</span><span class="sxs-lookup"><span data-stu-id="9c2ff-108">**Error ID:** BC33004</span></span>  
+ <span data-ttu-id="592bc-108">**ID errore:** BC33004</span><span class="sxs-lookup"><span data-stu-id="592bc-108">**Error ID:** BC33004</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9c2ff-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9c2ff-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="592bc-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="592bc-109">To correct this error</span></span>  
   
-- <span data-ttu-id="9c2ff-110">Se la routine è destinata a implementare un membro di interfaccia, riscriverla come routine `Function` o `Sub` , proprietà o evento.</span><span class="sxs-lookup"><span data-stu-id="9c2ff-110">If you intend this procedure to implement an interface member, rewrite it as a `Function` or `Sub` procedure, a property, or an event.</span></span>  
+- <span data-ttu-id="592bc-110">Se la routine è destinata a implementare un membro di interfaccia, riscriverla come routine `Function` o `Sub` , proprietà o evento.</span><span class="sxs-lookup"><span data-stu-id="592bc-110">If you intend this procedure to implement an interface member, rewrite it as a `Function` or `Sub` procedure, a property, or an event.</span></span>  
   
-- <span data-ttu-id="9c2ff-111">Se la routine è destinata a definire un operatore, rimuovere la parola chiave `Implements` dalla relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="9c2ff-111">If you intend this procedure to define an operator, remove the `Implements` keyword from its declaration.</span></span>  
+- <span data-ttu-id="592bc-111">Se la routine è destinata a definire un operatore, rimuovere la parola chiave `Implements` dalla relativa dichiarazione.</span><span class="sxs-lookup"><span data-stu-id="592bc-111">If you intend this procedure to define an operator, remove the `Implements` keyword from its declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9c2ff-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9c2ff-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="592bc-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="592bc-112">See also</span></span>
 
-- [<span data-ttu-id="9c2ff-113">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="9c2ff-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="9c2ff-114">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="9c2ff-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="9c2ff-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="9c2ff-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="592bc-113">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="592bc-113">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="592bc-114">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="592bc-114">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="592bc-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="592bc-115">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
