--- a/docs/visual-basic/misc/bc36585.md
+++ b/docs/visual-basic/misc/bc36585.md
@@ -1,5 +1,5 @@
 ---
-title: «<elementname>'non è un parametro del metodo di estensione'<methodname>'definito '<typename>»
+title: "' <elementname> ' non è un parametro del metodo di estensione ' <methodname> ' definito in ' <typename> '"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36585
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC36585
 ms.assetid: c83fb679-3559-473c-aaa9-6ff21e515f97
-ms.openlocfilehash: 3845c5b7e6c91e163f4982b84dc65babfd3c1675
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 04ee2afa30d3cbd4b16e33b3a58c115b423d35cd
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64632445"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84377353"
 ---
-# <a name="elementname-is-not-a-parameter-of-extension-method-methodname-defined-in-typename"></a><span data-ttu-id="bfb5b-102">'\<NomeElemento >' non è un parametro del metodo di estensione '\<NomeMetodo >' definito in '\<nomeTipo >'</span><span class="sxs-lookup"><span data-stu-id="bfb5b-102">'\<elementname>' is not a parameter of extension method '\<methodname>' defined in '\<typename>'</span></span>
-<span data-ttu-id="bfb5b-103">Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="bfb5b-103">A procedure call supplies an additional argument that is not defined by the extension method.</span></span>  
+# <a name="elementname-is-not-a-parameter-of-extension-method-methodname-defined-in-typename"></a><span data-ttu-id="8d890-102">' \<elementname> ' non è un parametro del metodo di estensione ' \<methodname> ' definito in ' \<typename> '</span><span class="sxs-lookup"><span data-stu-id="8d890-102">'\<elementname>' is not a parameter of extension method '\<methodname>' defined in '\<typename>'</span></span>
+<span data-ttu-id="8d890-103">Una chiamata di routine fornisce un argomento aggiuntivo non definito dal metodo di estensione.</span><span class="sxs-lookup"><span data-stu-id="8d890-103">A procedure call supplies an additional argument that is not defined by the extension method.</span></span>  
   
- <span data-ttu-id="bfb5b-104">**ID errore:** BC36585</span><span class="sxs-lookup"><span data-stu-id="bfb5b-104">**Error ID:** BC36585</span></span>  
+ <span data-ttu-id="8d890-104">**ID errore:** BC36585</span><span class="sxs-lookup"><span data-stu-id="8d890-104">**Error ID:** BC36585</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bfb5b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="bfb5b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8d890-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8d890-105">To correct this error</span></span>  
   
-- <span data-ttu-id="bfb5b-106">Rimuovere l'argomento superfluo dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="bfb5b-106">Remove the superfluous argument from the argument list.</span></span>  
+- <span data-ttu-id="8d890-106">Rimuovere l'argomento superfluo dall'elenco di argomenti.</span><span class="sxs-lookup"><span data-stu-id="8d890-106">Remove the superfluous argument from the argument list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bfb5b-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="bfb5b-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8d890-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8d890-107">See also</span></span>
 
-- [<span data-ttu-id="bfb5b-108">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="bfb5b-108">Extension Methods</span></span>](../../visual-basic/programming-guide/language-features/procedures/extension-methods.md)
-- [<span data-ttu-id="bfb5b-109">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="bfb5b-109">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="8d890-108">Metodi di estensione</span><span class="sxs-lookup"><span data-stu-id="8d890-108">Extension Methods</span></span>](../programming-guide/language-features/procedures/extension-methods.md)
+- [<span data-ttu-id="8d890-109">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="8d890-109">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
