--- a/docs/visual-basic/misc/bc36619.md
+++ b/docs/visual-basic/misc/bc36619.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36619
 ms.assetid: 1fd8c0dc-0e87-47b7-ab30-498809cca033
-ms.openlocfilehash: 73e2d16cd343727fe7241b4a36c2ffb7fa8e55ca
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a8ae940b3c75dda73fbce6d121ed8e07da0c7426
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970612"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398916"
 ---
-# <a name="equals-expected"></a><span data-ttu-id="89981-102">Previsto 'Equals'</span><span class="sxs-lookup"><span data-stu-id="89981-102">'Equals' expected</span></span>
-<span data-ttu-id="89981-103">Una clausola `Join` o `Group Join` è stata specificata senza un operatore `Equals` .</span><span class="sxs-lookup"><span data-stu-id="89981-103">A `Join` or `Group Join` clause has been specified without an `Equals` operator.</span></span> <span data-ttu-id="89981-104">L'operatore `Equals` viene usato per identificare l'operazione `Boolean` per testare i campi chiave per gli elementi corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="89981-104">You use the `Equals` operator to identify the `Boolean` operation to test key fields for matching items.</span></span>  
+# <a name="equals-expected"></a><span data-ttu-id="628f7-102">Previsto 'Equals'</span><span class="sxs-lookup"><span data-stu-id="628f7-102">'Equals' expected</span></span>
+<span data-ttu-id="628f7-103">Una clausola `Join` o `Group Join` è stata specificata senza un operatore `Equals` .</span><span class="sxs-lookup"><span data-stu-id="628f7-103">A `Join` or `Group Join` clause has been specified without an `Equals` operator.</span></span> <span data-ttu-id="628f7-104">L'operatore `Equals` viene usato per identificare l'operazione `Boolean` per testare i campi chiave per gli elementi corrispondenti.</span><span class="sxs-lookup"><span data-stu-id="628f7-104">You use the `Equals` operator to identify the `Boolean` operation to test key fields for matching items.</span></span>  
   
- <span data-ttu-id="89981-105">**ID errore:** BC36619</span><span class="sxs-lookup"><span data-stu-id="89981-105">**Error ID:** BC36619</span></span>  
+ <span data-ttu-id="628f7-105">**ID errore:** BC36619</span><span class="sxs-lookup"><span data-stu-id="628f7-105">**Error ID:** BC36619</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="89981-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="89981-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="628f7-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="628f7-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="89981-107">Aggiungere l'operatore `Equals` e i campi chiave alla clausola `Join` o `Group Join` .</span><span class="sxs-lookup"><span data-stu-id="89981-107">Add the `Equals` operator and key fields to the `Join` or `Group Join` clause.</span></span> <span data-ttu-id="89981-108">Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="89981-108">For example:</span></span>  
+1. <span data-ttu-id="628f7-107">Aggiungere l'operatore `Equals` e i campi chiave alla clausola `Join` o `Group Join` .</span><span class="sxs-lookup"><span data-stu-id="628f7-107">Add the `Equals` operator and key fields to the `Join` or `Group Join` clause.</span></span> <span data-ttu-id="628f7-108">Ad esempio:</span><span class="sxs-lookup"><span data-stu-id="628f7-108">For example:</span></span>  
   
 ```vb  
 Dim petOwnersGrouped = From pers In people _  
@@ -32,10 +32,10 @@ Dim petOwnersGrouped = From pers In people _
                               PetList  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="89981-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="89981-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="628f7-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="628f7-109">See also</span></span>
 
-- [<span data-ttu-id="89981-110">Procedura: Combinare dati utilizzando join</span><span class="sxs-lookup"><span data-stu-id="89981-110">How to: Combine Data with Joins</span></span>](../../visual-basic/programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
-- [<span data-ttu-id="89981-111">Clausola Join</span><span class="sxs-lookup"><span data-stu-id="89981-111">Join Clause</span></span>](../../visual-basic/language-reference/queries/join-clause.md)
-- [<span data-ttu-id="89981-112">Clausola Group Join</span><span class="sxs-lookup"><span data-stu-id="89981-112">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)
-- [<span data-ttu-id="89981-113">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="89981-113">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [<span data-ttu-id="89981-114">LINQ</span><span class="sxs-lookup"><span data-stu-id="89981-114">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [<span data-ttu-id="628f7-110">Procedura: Combinare dati utilizzando join</span><span class="sxs-lookup"><span data-stu-id="628f7-110">How to: Combine Data with Joins</span></span>](../programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
+- [<span data-ttu-id="628f7-111">Clausola join</span><span class="sxs-lookup"><span data-stu-id="628f7-111">Join Clause</span></span>](../language-reference/queries/join-clause.md)
+- [<span data-ttu-id="628f7-112">Clausola Group Join</span><span class="sxs-lookup"><span data-stu-id="628f7-112">Group Join Clause</span></span>](../language-reference/queries/group-join-clause.md)
+- [<span data-ttu-id="628f7-113">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="628f7-113">Introduction to LINQ in Visual Basic</span></span>](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="628f7-114">LINQ</span><span class="sxs-lookup"><span data-stu-id="628f7-114">LINQ</span></span>](../programming-guide/language-features/linq/index.md)
