--- a/docs/visual-basic/misc/bc36631.md
+++ b/docs/visual-basic/misc/bc36631.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC36631
 ms.assetid: bb2b03b6-6784-423a-b91a-cb7066c1d093
-ms.openlocfilehash: fc082bc4d6b38beef96225150cb09f85b1ef1364
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 7933178c3b63adf955a70809638ca519cf3ff725
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970430"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84398825"
 ---
-# <a name="join-expected"></a><span data-ttu-id="e22a6-102">Previsto 'Join'</span><span class="sxs-lookup"><span data-stu-id="e22a6-102">'Join' expected</span></span>
-<span data-ttu-id="e22a6-103">Una clausola `Group Join` è stata specificata senza una parola chiave `Join` .</span><span class="sxs-lookup"><span data-stu-id="e22a6-103">A `Group Join` clause has been specified without a `Join` keyword.</span></span>  
+# <a name="join-expected"></a><span data-ttu-id="3d1bd-102">Previsto 'Join'</span><span class="sxs-lookup"><span data-stu-id="3d1bd-102">'Join' expected</span></span>
+<span data-ttu-id="3d1bd-103">Una clausola `Group Join` è stata specificata senza una parola chiave `Join` .</span><span class="sxs-lookup"><span data-stu-id="3d1bd-103">A `Group Join` clause has been specified without a `Join` keyword.</span></span>  
   
- <span data-ttu-id="e22a6-104">**ID errore:** BC36631</span><span class="sxs-lookup"><span data-stu-id="e22a6-104">**Error ID:** BC36631</span></span>  
+ <span data-ttu-id="3d1bd-104">**ID errore:** BC36631</span><span class="sxs-lookup"><span data-stu-id="3d1bd-104">**Error ID:** BC36631</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e22a6-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e22a6-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3d1bd-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3d1bd-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="e22a6-106">Aggiungere la parola chiave `Join` alla clausola `Group Join` , come illustrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="e22a6-106">Add the `Join` keyword to the `Group Join` clause, as shown in the following example:</span></span>  
+1. <span data-ttu-id="3d1bd-106">Aggiungere la parola chiave `Join` alla clausola `Group Join` , come illustrato nell'esempio seguente:</span><span class="sxs-lookup"><span data-stu-id="3d1bd-106">Add the `Join` keyword to the `Group Join` clause, as shown in the following example:</span></span>  
   
 ```vb  
 Dim query = From var1 In collection1 _  
@@ -32,9 +32,9 @@ Dim query = From var1 In collection1 _
             Select JoinID = var1, var2.Name, Matches  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="e22a6-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e22a6-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="3d1bd-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3d1bd-107">See also</span></span>
 
-- [<span data-ttu-id="e22a6-108">Procedura: Combinare dati utilizzando join</span><span class="sxs-lookup"><span data-stu-id="e22a6-108">How to: Combine Data with Joins</span></span>](../../visual-basic/programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
-- [<span data-ttu-id="e22a6-109">Clausola Group Join</span><span class="sxs-lookup"><span data-stu-id="e22a6-109">Group Join Clause</span></span>](../../visual-basic/language-reference/queries/group-join-clause.md)
-- [<span data-ttu-id="e22a6-110">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="e22a6-110">Introduction to LINQ in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
-- [<span data-ttu-id="e22a6-111">LINQ</span><span class="sxs-lookup"><span data-stu-id="e22a6-111">LINQ</span></span>](../../visual-basic/programming-guide/language-features/linq/index.md)
+- [<span data-ttu-id="3d1bd-108">Procedura: Combinare dati utilizzando join</span><span class="sxs-lookup"><span data-stu-id="3d1bd-108">How to: Combine Data with Joins</span></span>](../programming-guide/language-features/linq/how-to-combine-data-with-linq-by-using-joins.md)
+- [<span data-ttu-id="3d1bd-109">Clausola Group Join</span><span class="sxs-lookup"><span data-stu-id="3d1bd-109">Group Join Clause</span></span>](../language-reference/queries/group-join-clause.md)
+- [<span data-ttu-id="3d1bd-110">Introduzione a LINQ in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="3d1bd-110">Introduction to LINQ in Visual Basic</span></span>](../programming-guide/language-features/linq/introduction-to-linq.md)
+- [<span data-ttu-id="3d1bd-111">LINQ</span><span class="sxs-lookup"><span data-stu-id="3d1bd-111">LINQ</span></span>](../programming-guide/language-features/linq/index.md)
