commit translated contents

--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
 ms.date: 04/29/2020
-ms.openlocfilehash: 4bb49cec4a5172c9a01aa5e951554a79e5571ac2
-ms.sourcegitcommit: b16c00371ea06398859ecd157defc81301c9070f
+ms.openlocfilehash: 712ff5b24aef6976c67e344e3a84e83d805868e0
+ms.sourcegitcommit: 1cbd77da54405ea7dba343ac0334fb03237d25d2
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 06/05/2020
-ms.locfileid: "84446991"
+ms.lasthandoff: 06/11/2020
+ms.locfileid: "84702443"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -92,11 +92,12 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 
 ***
 
-## <a name="windows-forms"></a>Windows Forms
+## <a name="windows-forms"></a>Windows Form
 
 - [Rimossi controlli barra di stato](#removed-status-bar-controls)
 - [I metodi WinForms ora generano ArgumentException](#winforms-methods-now-throw-argumentexception)
 - [I metodi WinForms ora generano ArgumentNullException](#winforms-methods-now-throw-argumentnullexception)
+- [Le proprietà di WinForms ora generano ArgumentOutOfRangeException](#winforms-properties-now-throw-argumentoutofrangeexception)
 
 [!INCLUDE [winforms-deprecated-controls](../../../includes/core-changes/windowsforms/5.0/winforms-deprecated-controls.md)]
 
@@ -107,5 +108,9 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 ***
 
 [!INCLUDE [null-args-cause-argumentnullexception](../../../includes/core-changes/windowsforms/5.0/null-args-cause-argumentnullexception.md)]
+
+***
+
+[!INCLUDE [invalid-args-cause-argumentoutofrangeexception](../../../includes/core-changes/windowsforms/5.0/invalid-args-cause-argumentoutofrangeexception.md)]
 
 ***
